adjusting document to be handled correctly, adjusting some wrong tests